--- a/javascript-practice/index.html
+++ b/javascript-practice/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="time" class="titi">00:00</h1>
-    <script src="js/app.js"></script>
+    <h1 id="time" class="time">00:00</h1>
+    <script src="js/app2.js"></script>
+    <!-- 
+      script 위치의 경우 보통 body 바로 직전에 위치하는데
+      그 전에 위치해도 상관 없긴 하지만 html 렌더링 후 javascript가 실행되기 때문에 그 전에 위치하려면 js파일에 document.ready 를 넣어주기~  
+    -->
   </body>
 </html>
